# rsagg

./: .gitignore  Cargo.toml  LICENSE.md  README.md  kernel.cl  kernel.md
.github/workflows/: linux.yml  windows.yml
agvg/: Cargo.toml
agvg/src/: bacon.rs  lib.rs
bacon/: Cargo.toml
bacon/src/: main.rs
bacon/tests/: cli.rs
examples/: 5.txt  6.txt  7.txt  8.txt  9_letter_words.txt
rac/: Cargo.toml
rac/src/: lib.rs
scripts/: setup.sh
