[package]
name = "agvg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
num_cpus = "1.16.0"
opencl3 = { version = "0.9.5", features = ["CL_VERSION_2_1"] }
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.63"
