[package]
name = "agvg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
num_cpus = "1.17.0"
opencl3 = { version = "0.12.1", features = ["CL_VERSION_2_1"] }
rand = "0.10.0"
rayon = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.75"
