[package]
name = "bacon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agvg = { path = "../agvg" }
algonaut = "0.4.2"
algonaut_crypto = "0.4.2"
algonaut_transaction = "0.4.2"
clap = { version = "4.4.7", features = ["derive"] }
crossbeam-channel = "0.5.12"
csv = "1.3.0"
num_cpus = "1.16.0"
opencl3 = { version = "0.11.0", features = ["CL_VERSION_2_1"] }
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8.1"
serde = "1.0.215"
serde_json = "1.0.133"
sha2 = "0.10.8"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.63"
