[package]
name = "bacon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agvg = { path = "../agvg" }
algonaut = "0.4.2"
algonaut_crypto = "0.4.2"
algonaut_transaction = "0.4.2"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
num_cpus = "1.17.0"
opencl3 = { version = "0.12.1", features = ["CL_VERSION_2_1"] }
rand = "0.10.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.75"
